2006-05-22  Michael S. Tsirkin  <mst@mellanox.co.il>

	* include/infiniband/verbs.h: Remove trailing commas from
	enumerators to quiet warnings from obsolete compilers.

2006-05-02  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.3.

2006-05-01  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/arch.h: Only SPARC V9 ISA supports membar.
	So just use generic memory barrier for older sparc archs.

2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* src/sysfs.c (ibv_read_sysfs_file): Fix memory leak if open fails.

	* src/device.c (ibv_get_device_guid), src/verbs.c (ibv_query_gid,
	ibv_query_pkey), src/init.c (init_drivers, check_abi_version): Use
	libibverbs functions instead of libsysfs functions to get to sysfs.

	* src/sysfs.c (ibv_get_sysfs_path, ibv_read_sysfs_file): Add some
	simple functions for accessing sysfs without using libsysfs.

	* include/infiniband/sa-kern-abi.h: Deprecate struct
	ib_kern_path_rec name; struct ibv_kern_path_rec is now preferred.

	* include/infiniband/sa.h: Deprecate struct ib_sa_XXX names;
	struct ibv_sa_XXX is now preferred.

	* src/marshall.c, include/infiniband/marshall.h: Deprecate
	ib_copy_XXX() names; ibv_copy_XXX() is preferred.  Add stub
	wrappers with the old names so old binaries still work.

2006-04-11  Hoang-Nam Nguyen  <HNGUYEN@de.ibm.com>

	* src/verbs.c (ibv_rate_to_mult, mult_to_ibv_rate): Add new
	functions to convert between IB rate enums and multiples of the
	base 2.5 Gb/sec rate.

2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Add __attribute_const macro to
	portably mark functions as __attribute__((const))

2006-03-28  Roland Dreier  <rdreier@cisco.com>

	* src/init.c (load_driver): Print warning if dlopen() of a driver
	plugin fails.

2006-03-22  Dotan Barak  <dotanb@mellanox.co.il>

	* examples/asyncwatch.c: Print asynchronous event name as well as
	raw integer value.
	
2006-03-22  Roland Dreier  <rdreier@cisco.com>
