@@ -196,7 +196,8 @@ enum ibv_event_type {
 	IBV_EVENT_SM_CHANGE,
 	IBV_EVENT_SRQ_ERR,
 	IBV_EVENT_SRQ_LIMIT_REACHED,
-	IBV_EVENT_QP_LAST_WQE_REACHED
+	IBV_EVENT_QP_LAST_WQE_REACHED,
+	IBV_EVENT_CLIENT_REREGISTER
 };
 
 struct ibv_async_event {
